downgrade to java 17 for deployment